Dev task 5 - updates. Added reactive