@@ -2,98 +2,121 @@ package com.company.bootcamp.task5.services;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.ExecutionException;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
 
 import org.springframework.stereotype.Service;
 
 import com.company.bootcamp.task5.model.QdrantVectorRQ;
-import com.google.common.util.concurrent.ListenableFuture;
 import com.microsoft.semantickernel.services.textembedding.Embedding;
 
 import io.qdrant.client.QdrantClient;
 import io.qdrant.client.grpc.Collections;
 import io.qdrant.client.grpc.Points;
 import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Mono;
 
 import static io.qdrant.client.VectorsFactory.vectors;
-import static io.qdrant.client.WithPayloadSelectorFactory.enable;
 
 @Slf4j
 @Service
 public class QdrantService {
     private final QdrantClient qdrantClient;
+    private final Executor executor = Executors.newCachedThreadPool();
 
     public QdrantService(QdrantClient qdrantClient) {
         this.qdrantClient = qdrantClient;
     }
 
-    public Collections.CollectionOperationResponse createCollection(String collectionName) throws ExecutionException, InterruptedException {
+    private <T> Mono<T> toMono(com.google.common.util.concurrent.ListenableFuture<T> listenableFuture) {
+        CompletableFuture<T> completableFuture = new CompletableFuture<>();
+        listenableFuture.addListener(() -> {
+            try {
+                completableFuture.complete(listenableFuture.get());
+            } catch (Exception e) {
+                completableFuture.completeExceptionally(e);
+            }
+        }, executor);
+        return Mono.fromFuture(completableFuture);
+    }
+
+    public Mono<Collections.CollectionOperationResponse> createCollection(String collectionName) {
         var vectorParams = Collections.VectorParams.newBuilder()
                 .setDistance(Collections.Distance.Cosine)
                 .setSize(1536)
                 .build();
-        var createCollectionRq = Collections
-                .CreateCollection.newBuilder()
+
+        var createCollectionRq = Collections.CreateCollection.newBuilder()
                 .setCollectionName(collectionName)
-                .setVectorsConfig(
-                        Collections.VectorsConfig.newBuilder()
-                                .setParams(vectorParams).build())
+                .setVectorsConfig(Collections.VectorsConfig.newBuilder().setParams(vectorParams).build())
                 .build();
-        var result = qdrantClient.createCollectionAsync(createCollectionRq);
-        return result.get();
+
+        return toMono(qdrantClient.createCollectionAsync(createCollectionRq));
     }
 
-    public Collections.CollectionOperationResponse deleteCollection(String collectionName) throws ExecutionException, InterruptedException {
-        var future = qdrantClient.deleteCollectionAsync(collectionName);
-        return future.get();
+    public Mono<Collections.CollectionOperationResponse> deleteCollection(String collectionName) {
+        return toMono(qdrantClient.deleteCollectionAsync(collectionName));
     }
 
-
-    public ListenableFuture<Points.UpdateResult> addVector(String collectionName, QdrantVectorRQ request) throws ExecutionException, InterruptedException {
+    public Mono<Points.UpdateResult> addVector(String collectionName, QdrantVectorRQ request) {
         Points.PointStruct point = Points.PointStruct.newBuilder()
                 .setId(Points.PointId.newBuilder().setUuid(request.getId().toString()).build())
                 .setVectors(vectors(request.getVector()))
                 .putAllPayload(request.getPayload())
                 .build();
 
-        return qdrantClient.upsertAsync(collectionName, List.of(point));
+        return toMono(qdrantClient.upsertAsync(collectionName, List.of(point)));
     }
 
-    public ListenableFuture<List<Points.RetrievedPoint>> getVector(String collectionName, UUID id) {
+    public Mono<List<Points.RetrievedPoint>> getVector(String collectionName, UUID id) {
         Points.GetPoints getPoints = Points.GetPoints.newBuilder()
                 .setCollectionName(collectionName)
-                .addIds(Points.PointId.newBuilder().setUuid(String.valueOf(id)).build())
+                .addIds(Points.PointId.newBuilder().setUuid(id.toString()).build())
                 .build();
-        return qdrantClient.retrieveAsync(getPoints, null);
+
+        return toMono(qdrantClient.retrieveAsync(getPoints, null));
     }
 
-    public void deleteVector(String collectionName, UUID id) throws ExecutionException, InterruptedException {
+    public Mono<Points.UpdateResult> deleteVector(String collectionName, UUID id) {
         Points.DeletePoints request = Points.DeletePoints.newBuilder()
                 .setCollectionName(collectionName)
                 .setPoints(Points.PointsSelector.newBuilder()
                         .setPoints(Points.PointsIdsList.newBuilder()
-                                .addIds(Points.PointId.newBuilder().setUuid(String.valueOf(id)).build())
-                                .build()).build())
+                                .addIds(Points.PointId.newBuilder().setUuid(id.toString()).build())
+                                .build())
+                        .build())
                 .build();
-        qdrantClient.deleteAsync(request).get();
+
+        return toMono(qdrantClient.deleteAsync(request));
     }
 
-    public void updateVector(String collectionName, QdrantVectorRQ request) throws ExecutionException, InterruptedException {
-        addVector(collectionName, request);
+    public Mono<Points.UpdateResult> updateVector(String collectionName, QdrantVectorRQ request) {
+        return addVector(collectionName, request);
     }
 
-    public Long pointsCount(String collectionName) throws ExecutionException, InterruptedException {
-        return qdrantClient.getCollectionInfoAsync(collectionName)
-                .get().getPointsCount();
+    public Mono<Long> pointsCount(String collectionName) {
+        return getCollectionInfo(collectionName)
+                .map(Collections.CollectionInfo::getPointsCount);
     }
 
+    public Mono<List<Points.ScoredPoint>> searchVectors(String collectionName, List<Embedding> embeddings) {
+        if (embeddings.isEmpty()) {
+            return Mono.error(new IllegalArgumentException("Embeddings list cannot be empty"));
+        }
 
-    public List<Points.ScoredPoint> searchVectors(String collectionName, List<Embedding> embeddings) throws ExecutionException, InterruptedException {
-        return qdrantClient.searchAsync(Points.SearchPoints.newBuilder()
+        Points.SearchPoints searchRequest = Points.SearchPoints.newBuilder()
                 .setCollectionName(collectionName)
-                .addAllVector(embeddings.getFirst().getVector())
+                .addAllVector(embeddings.get(0).getVector())
                 .setLimit(10)
-                .setWithPayload(enable(true))
-                .build()).get();
+                .setWithPayload(Points.WithPayloadSelector.newBuilder().setEnable(true).build())
+                .build();
+
+        return toMono(qdrantClient.searchAsync(searchRequest));
+    }
+
+    public Mono<Collections.CollectionInfo> getCollectionInfo(String collectionName) {
+        return toMono(qdrantClient.getCollectionInfoAsync(collectionName))
+                .onErrorMap(e -> new RuntimeException("Failed to get collection info for collection: " + collectionName, e));
     }
 }
